--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <h1>Política de Privacidad de DikeM</h1>
   <p>Esta aplicación no recopila, almacena ni comparte datos personales de los usuarios. No se utiliza ningún sistema de seguimiento, publicidad personalizada ni acceso a información sensible. La aplicación está diseñada únicamente con fines de entretenimiento.</p>
   <p>Desarrollador: Jesús Asenjo Gil</p>
-  <p>Contacto: [tu correo si quieres incluirlo]</p>
+  <p>Contacto: [asenjogil@hotmail.com]</p>
 </body>
 </html>
+
