--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <title>Política de Privacidad</title>
 </head>
 <body>
-  <h1>Política de Privacidad de DikeM</h1>
+  <h1>Política de Privacidad de DilexMi</h1>
   <p>Esta aplicación no recopila, almacena ni comparte datos personales de los usuarios. No se utiliza ningún sistema de seguimiento, publicidad personalizada ni acceso a información sensible. La aplicación está diseñada únicamente con fines de entretenimiento.</p>
   <p>Desarrollador: Jesús Asenjo Gil</p>
   <p>Contacto: [asenjogil@hotmail.com]</p>
 </body>
 </html>
+
 
